--- a/resources/assets/js/components/Pages/Game/GameStart/GameStart.scss
+++ b/resources/assets/js/components/Pages/Game/GameStart/GameStart.scss
@@ -57,6 +57,81 @@
 					}
 				}
 			}
+
+			.game-created-container {
+				color: $mytheme-color-second;
+
+				.game-created-title {
+					text-align: center;
+					color: $mytheme-color-first;
+					font-size: 2rem;
+					padding: 5px 0px 15px;
+					border-bottom: 2px solid $mytheme-color-sixth;
+					text-transform: uppercase;
+				}
+
+				.game-created-join-link {
+					display: flex;
+					align-items: baseline;
+					justify-content: space-between;
+					margin: 20px 0px 25px;
+					.game-created-join-link-input {
+						width: 80%;
+						input {
+							cursor: text;
+							&:hover {
+								cursor: text;
+							}
+						}
+						.helper-text {
+							color: $mytheme-color-first;
+							padding-left: 2px;
+						}
+					}
+
+					.mybtn2 {
+						padding: 5px 25px;
+						width: 67px;
+					}
+				}
+				.game-created-user-list {
+					padding: 0px;
+					.game-created-user-list-item {
+						display: flex;
+						justify-content: space-between;
+						align-items: center;
+						.game-created-user-avatar {
+							display: block;
+							height: 50px;
+							border-radius: 50%;
+							position: relative;
+
+							img {
+								width: 50px;
+							}
+							.game-creater-user-leader {
+								position: absolute;
+								right: -7px;
+								top: 0px;
+								color: $mytheme-color-first;
+							}
+						}
+						.game-created-user-username {
+							width: 270px;
+						}
+						.game-created-user-kick {
+							.mybtn2 {
+								padding: 5px 25px;
+							}
+						}
+					}
+				}
+				.game-created-chat-container {
+					.game-board-chat-body {
+						max-height: 200px !important;
+					}
+				}
+			}
 		}
 
 		.game-start-rules-container {
