--- a/resources/assets/js/components/Pages/Game/GameChat/GameChat.scss
+++ b/resources/assets/js/components/Pages/Game/GameChat/GameChat.scss
@@ -31,8 +31,6 @@
 				width: auto;
 				margin: 5px 0px 10px 20px;
 				padding: 5px 20px 5px 0px;
-				.game-board-chat-user {
-				}
 
 				.game-board-chat-text {
 					padding: 10px 15px;
@@ -52,9 +50,10 @@
 			#game-board-chat-input {
 				border-width: 2px;
 				height: 65px;
-				padding: 10px;
+				padding: 10px 70px 10px 10px;
 				background: #fff;
 				color: $mytheme-color-second;
+				overflow-x: scroll;
 				&:focus {
 					box-shadow: none;
 				}
