--- a/resources/assets/js/components/Pages/Play/Play.scss
+++ b/resources/assets/js/components/Pages/Play/Play.scss
@@ -102,7 +102,7 @@
 					padding: 0px;
 					.game-created-user-list-item {
 						display: flex;
-						justify-content: space-between;
+						justify-content: left;
 						align-items: center;
 						.game-created-user-avatar {
 							display: block;
