--- a/resources/assets/js/components/Pages/Play/Play.scss
+++ b/resources/assets/js/components/Pages/Play/Play.scss
@@ -104,6 +104,7 @@
 						display: flex;
 						justify-content: left;
 						align-items: center;
+						margin: 10px 0px;
 						.game-created-user-avatar {
 							display: block;
 							height: 50px;
