Adding modal and fixing some bugs like (event.target on glyph click)

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13806,5 +13806,28 @@ body {
   color: #37ca8a;
 }
 
+.react-modal-backdrop {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1040;
+  background-color: rgba(0, 0, 0, 0.5);
+}
+
+.react-modal-backdrop .react-modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1050;
+  display: none;
+  overflow: hidden;
+  outline: 0;
+  display: block;
+}
+
 
 /*# sourceMappingURL=app.css.map*/
