--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -25,3 +25,5 @@
 @import '../js/components/Pages/Game/GameCanvas/GameTools/GameTools';
 
 @import '../js/components/Pages/Play/Play';
+
+@import '../js/components/Common/Modal/Modal';
