--- a/resources/assets/sass/global.scss
+++ b/resources/assets/sass/global.scss
@@ -139,3 +139,67 @@ body {
 		box-shadow: none;
 	}
 }
+
+.spinner-container {
+	position: absolute;
+	overflow: hidden;
+	padding: 7px;
+	top: 0px;
+	left: 0px;
+	width: 100%;
+	height: 100%;
+	.spinner-icon {
+		display: block;
+		font-size: 8px;
+		position: relative;
+		left: 0%;
+		color: #ced4da;
+		animation-name: spinnerAnimation;
+		animation-duration: 3s;
+		animation-timing-function: cubic-bezier(0.18, -0.06, 0.09, 0.98);
+		animation-iteration-count: infinite;
+		animation-delay: 0.1s;
+		text-align: left;
+	}
+}
+
+@keyframes spinnerAnimation {
+	0% {
+		left: 0%;
+		top: 0%;
+	}
+
+	25% {
+		left: 95%;
+		top: 0%;
+	}
+
+	50% {
+		left: 95%;
+		top: 80%;
+	}
+
+	75% {
+		left: 0%;
+		top: 80%;
+	}
+
+	100% {
+		left: 0%;
+		top: 0%;
+	}
+}
+
+input[type='button']:disabled,
+input[type='submit']:disabled,
+input[type='reset']:disabled,
+input[type='file']:disabled::-webkit-file-upload-button,
+button:disabled,
+select:disabled,
+optgroup:disabled,
+option:disabled,
+select[disabled] > option {
+	border-color: #ced4da !important;
+	color: #ced4da !important;
+	pointer-events: none;
+}
