--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12726,86 +12726,53 @@ body {
   box-shadow: none;
 }
 
-.spinner-container {
-  position: absolute;
-  overflow: hidden;
-  padding: 7px;
-  top: 0px;
-  left: 0px;
-  width: 100%;
-  height: 100%;
-}
-
-.spinner-container .spinner-icon {
-  display: block;
-  font-size: 8px;
-  position: relative;
-  left: 0%;
+.spinner-icon {
+  display: inline-block;
   color: #ced4da;
   -webkit-animation-name: spinnerAnimation;
           animation-name: spinnerAnimation;
   -webkit-animation-duration: 3s;
           animation-duration: 3s;
-  -webkit-animation-timing-function: cubic-bezier(0.18, -0.06, 0.09, 0.98);
-          animation-timing-function: cubic-bezier(0.18, -0.06, 0.09, 0.98);
+  -webkit-animation-timing-function: cubic-bezier(0.99, -0.07, 0.67, 1.53);
+          animation-timing-function: cubic-bezier(0.99, -0.07, 0.67, 1.53);
   -webkit-animation-iteration-count: infinite;
           animation-iteration-count: infinite;
-  -webkit-animation-delay: 0.1s;
-          animation-delay: 0.1s;
+  -webkit-animation-delay: 0.4s;
+          animation-delay: 0.4s;
   text-align: left;
 }
 
 @-webkit-keyframes spinnerAnimation {
   0% {
-    left: 0%;
-    top: 0%;
-  }
-
-  25% {
-    left: 95%;
-    top: 0%;
+    -webkit-transform: rotate3d(0, 0, 0, 0deg);
+            transform: rotate3d(0, 0, 0, 0deg);
   }
 
   50% {
-    left: 95%;
-    top: 80%;
-  }
-
-  75% {
-    left: 0%;
-    top: 80%;
+    -webkit-transform: rotate3d(0, 0, 1, 540deg);
+            transform: rotate3d(0, 0, 1, 540deg);
   }
 
   100% {
-    left: 0%;
-    top: 0%;
+    -webkit-transform: rotate3d(0, 0, 1, 0deg);
+            transform: rotate3d(0, 0, 1, 0deg);
   }
 }
 
 @keyframes spinnerAnimation {
   0% {
-    left: 0%;
-    top: 0%;
-  }
-
-  25% {
-    left: 95%;
-    top: 0%;
+    -webkit-transform: rotate3d(0, 0, 0, 0deg);
+            transform: rotate3d(0, 0, 0, 0deg);
   }
 
   50% {
-    left: 95%;
-    top: 80%;
-  }
-
-  75% {
-    left: 0%;
-    top: 80%;
+    -webkit-transform: rotate3d(0, 0, 1, 540deg);
+            transform: rotate3d(0, 0, 1, 540deg);
   }
 
   100% {
-    left: 0%;
-    top: 0%;
+    -webkit-transform: rotate3d(0, 0, 1, 0deg);
+            transform: rotate3d(0, 0, 1, 0deg);
   }
 }
 
