--- a/resources/assets/sass/global.scss
+++ b/resources/assets/sass/global.scss
@@ -140,53 +140,28 @@ body {
 	}
 }
 
-.spinner-container {
-	position: absolute;
-	overflow: hidden;
-	padding: 7px;
-	top: 0px;
-	left: 0px;
-	width: 100%;
-	height: 100%;
-	.spinner-icon {
-		display: block;
-		font-size: 8px;
-		position: relative;
-		left: 0%;
-		color: #ced4da;
-		animation-name: spinnerAnimation;
-		animation-duration: 3s;
-		animation-timing-function: cubic-bezier(0.18, -0.06, 0.09, 0.98);
-		animation-iteration-count: infinite;
-		animation-delay: 0.1s;
-		text-align: left;
-	}
+.spinner-icon {
+	display: inline-block;
+	color: #ced4da;
+	animation-name: spinnerAnimation;
+	animation-duration: 3s;
+	animation-timing-function: cubic-bezier(0.99, -0.07, 0.67, 1.53);
+	animation-iteration-count: infinite;
+	animation-delay: 0.4s;
+	text-align: left;
 }
 
 @keyframes spinnerAnimation {
 	0% {
-		left: 0%;
-		top: 0%;
-	}
-
-	25% {
-		left: 95%;
-		top: 0%;
+		transform: rotate3d(0, 0, 0, 0deg);
 	}
 
 	50% {
-		left: 95%;
-		top: 80%;
-	}
-
-	75% {
-		left: 0%;
-		top: 80%;
+		transform: rotate3d(0, 0, 1, 540deg);
 	}
 
 	100% {
-		left: 0%;
-		top: 0%;
+		transform: rotate3d(0, 0, 1, 0deg);
 	}
 }
 
