--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -27,3 +27,7 @@
 @import '../js/components/Pages/Play/Play';
 
 @import '../js/components/Common/Modal/Modal';
+
+@import '../js/components/Pages/PageStatuses/Page404';
+
+@import '../js/components/Common/Countdown/Countdown';
