--- a/resources/assets/js/components/Pages/Game/GameScore/GameScore.scss
+++ b/resources/assets/js/components/Pages/Game/GameScore/GameScore.scss
@@ -55,11 +55,15 @@
 						}
 					}
 					.game-board-score-avatar {
-						width: 40px;
-						height: 40px;
+						width: 50px;
+						height: 50px;
 						position: relative;
 						display: inline-block;
-						border: 2px solid $mytheme-color-third;
+						img {
+							display: block;
+							width: 100%;
+							border-radius: 50%;
+						}
 					}
 					.game-board-score-position {
 						color: #fff;
@@ -117,5 +121,11 @@
 
 	100% {
 		transform: rotateZ(-16deg);
+	}
+}
+
+@media screen and (max-width: 1366px) {
+	.game-board-container-left {
+		max-height: 580px;
 	}
 }
