--- a/resources/assets/js/components/Pages/Game/GameToolBar/GameToolBar.scss
+++ b/resources/assets/js/components/Pages/Game/GameToolBar/GameToolBar.scss
@@ -16,6 +16,9 @@
 				border-bottom: 1.5px solid #fff;
 				margin-right: 8px;
 				text-transform: uppercase;
+				width: 15px;
+				display: inline-block;
+				text-align: center;
 			}
 		}
 		.info-tooltip {
