--- a/resources/assets/js/components/Common/Countdown/Countdown.scss
+++ b/resources/assets/js/components/Common/Countdown/Countdown.scss
@@ -20,6 +20,10 @@
 	& > div {
 		height: 100px;
 		width: 100px;
+		position: absolute;
+		top: 45%;
+		left: 50%;
+		transform: translate(-50%, -50%);
 	}
 }
 
