--- a/resources/assets/js/components/Common/Modal/Modal.scss
+++ b/resources/assets/js/components/Common/Modal/Modal.scss
@@ -4,7 +4,7 @@
 	right: 0;
 	bottom: 0;
 	left: 0;
-	z-index: 1040;
+	z-index: 10003;
 	background-color: rgba(0, 0, 0, 0.5);
 	.react-modal {
 		position: fixed;
@@ -12,10 +12,16 @@
 		right: 0;
 		bottom: 0;
 		left: 0;
-		z-index: 1050;
+		z-index: 10004;
 		display: none;
 		overflow: hidden;
 		outline: 0;
 		display: block;
+
+		.choose-word-button-group {
+			.mybtn2 {
+				padding: 15px 35px;
+			}
+		}
 	}
 }
