--- a/resources/assets/js/components/Pages/Play/Play.scss
+++ b/resources/assets/js/components/Pages/Play/Play.scss
@@ -31,6 +31,8 @@
 				text-transform: uppercase;
 			}
 			.game-start-canvas-container {
+				width: 300px;
+				margin: 0 auto;
 				text-align: center;
 				padding: 10px;
 				color: $mytheme-color-first;
