--- a/resources/assets/js/components/Pages/Game/GameCanvas/GameCanvas.scss
+++ b/resources/assets/js/components/Pages/Game/GameCanvas/GameCanvas.scss
@@ -1,10 +1,12 @@
 .game-board-container-center {
-	padding-top: 15px;
-	padding-bottom: 15px;
-	padding: 15px 10px;
+	overflow: hidden;
+	width: 100%;
+	height: 100%;
 	.game-board-sketchpad {
 		background: #fff;
 		overflow: hidden;
+		width: 100%;
+		height: 100%;
 
 		.game-board-sketchpad-canvas {
 			display: block;
