--- a/resources/assets/js/components/Pages/Game/GameChat/GameChat.scss
+++ b/resources/assets/js/components/Pages/Game/GameChat/GameChat.scss
@@ -1,8 +1,6 @@
 .game-board-container-right {
 	height: 100%;
 	max-height: 730px;
-	padding-top: 15px;
-	padding-bottom: 15px;
 	color: $mytheme-color-second;
 
 	.game-board-chat {
@@ -121,5 +119,11 @@
 @media screen and (max-width: 1366px) {
 	.game-board-container-right {
 		max-height: 580px;
+	}
+}
+
+@media screen and (max-width: 768px) {
+	.game-board-container-right {
+		min-height: 400px;
 	}
 }
