--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13378,7 +13378,8 @@ select[disabled] > option {
 .game-board-container-center {
   overflow: hidden;
   width: 100%;
-  height: 100%;
+  height: 730px;
+  max-height: 730px;
 }
 
 .game-board-container-center .game-board-sketchpad {
@@ -13893,6 +13894,7 @@ select[disabled] > option {
 
 .page-start-game .game-start-container .game-start-card .game-start-canvas-container {
   width: 300px;
+  height: 300px;
   margin: 0 auto;
   text-align: center;
   padding: 10px;
@@ -13911,7 +13913,7 @@ select[disabled] > option {
 
 .page-start-game .game-start-container .game-start-card .game-start-username-form-container {
   text-align: center;
-  margin: 20px auto;
+  margin: 50px auto 25px;
 }
 
 .page-start-game .game-start-container .game-start-card .game-start-username-form-container .game-start-buttons {
@@ -14107,7 +14109,7 @@ select[disabled] > option {
 }
 
 .countdown-container {
-  position: absolute;
+  position: fixed;
   top: 0px;
   left: 0px;
   background: rgba(0, 0, 0, 0.6);
@@ -14120,6 +14122,7 @@ select[disabled] > option {
 }
 
 .countdown-container .countdown-number {
+  color: #fff !important;
   font-size: 1rem;
   position: absolute;
   left: 50%;
