--- a/resources/assets/js/components/Common/Countdown/Countdown.scss
+++ b/resources/assets/js/components/Common/Countdown/Countdown.scss
@@ -1,5 +1,5 @@
 .countdown-container {
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	left: 0px;
 	background: rgba(0, 0, 0, 0.6);
@@ -11,6 +11,7 @@
 	z-index: 10001;
 
 	.countdown-number {
+		color: #fff !important;
 		font-size: 1rem;
 		position: absolute;
 		left: 50%;
