--- a/resources/assets/js/components/Pages/Game/GameCanvas/GameCanvas.scss
+++ b/resources/assets/js/components/Pages/Game/GameCanvas/GameCanvas.scss
@@ -1,13 +1,13 @@
 .game-board-container-center {
 	overflow: hidden;
 	width: 100%;
-	height: 100%;
+	height: 730px;
+	max-height: 730px;
 	.game-board-sketchpad {
 		background: #fff;
 		overflow: hidden;
 		width: 100%;
 		height: 100%;
-
 		.game-board-sketchpad-canvas {
 			display: block;
 			margin: 0 auto;
