--- a/resources/assets/js/components/Pages/Play/Play.scss
+++ b/resources/assets/js/components/Pages/Play/Play.scss
@@ -32,6 +32,7 @@
 			}
 			.game-start-canvas-container {
 				width: 300px;
+				height: 300px;
 				margin: 0 auto;
 				text-align: center;
 				padding: 10px;
@@ -48,7 +49,7 @@
 
 			.game-start-username-form-container {
 				text-align: center;
-				margin: 20px auto;
+				margin: 50px auto 25px;
 				.game-start-buttons {
 					display: flex;
 					justify-content: space-around;
