--- a/resources/assets/js/components/Navigation/Navigation.scss
+++ b/resources/assets/js/components/Navigation/Navigation.scss
@@ -1,13 +1,20 @@
 .main-nav {
 	font-size: 1.2rem;
 	height: 65px;
+	background: rgba(255, 255, 255, 0.95);
+	transition: 0.2s all cubic-bezier(0.455, 0.03, 0.515, 0.955);
 	.navbar-brand {
-		color: #fff;
+		color: $mytheme-color-second;
 	}
 
 	.nav-item {
 		position: relative;
 
+		.nav-link-active:before {
+			opacity: 1 !important;
+			transition: all 0.3s;
+			width: 100% !important;
+		}
 		&:hover {
 			.nav-link:before {
 				opacity: 1;
@@ -17,7 +24,7 @@
 		}
 
 		.nav-link {
-			color: #fff;
+			color: $mytheme-color-second;
 			&::before {
 				position: absolute;
 				top: 100%;
@@ -25,7 +32,7 @@
 				transform: translateX(-50%);
 				width: 100%;
 				height: 4px;
-				background: #fff;
+				background: $mytheme-color-first;
 				content: '';
 				opacity: 0;
 				width: 10%;
@@ -34,26 +41,5 @@
 	}
 }
 .main-nav-scrolled {
-	opacity: 0;
-	.navbar-brand {
-		color: $mytheme-color-second !important;
-		&:hover {
-			color: $mytheme-color-first !important;
-		}
-	}
-	.nav-link {
-		color: $mytheme-color-second !important;
-		&::before {
-			background: $mytheme-color-first !important;
-		}
-	}
-	animation: nav-slide 0.2s ease-in-out 0.4s forwards;
-	@extend .shadow;
-}
-
-@keyframes nav-slide {
-	100% {
-		opacity: 1;
-		background: #fff;
-	}
+	transform: translate3d(0px, -80px, 0px);
 }
