--- a/resources/assets/sass/global.scss
+++ b/resources/assets/sass/global.scss
@@ -141,17 +141,6 @@ body {
 	}
 }
 
-.spinner-icon {
-	display: inline-block;
-	color: #ced4da;
-	animation-name: spinnerAnimation;
-	animation-duration: 3s;
-	animation-timing-function: cubic-bezier(0.99, -0.07, 0.67, 1.53);
-	animation-iteration-count: infinite;
-	animation-delay: 0.4s;
-	text-align: left;
-}
-
 input[type='button']:disabled,
 input[type='submit']:disabled,
 input[type='reset']:disabled,
@@ -164,4 +153,9 @@ select[disabled] > option {
 	border-color: #ced4da !important;
 	color: #ced4da !important;
 	pointer-events: none;
+}
+
+.special-text {
+	word-spacing: 1.1px;
+	letter-spacing: 0.6px;
 }
